Fixed spacing, added authorized domains in firebase, removed contact page

--- a/src/components/sign-in/sign-in.module.css
+++ b/src/components/sign-in/sign-in.module.css
@@ -5,9 +5,10 @@
     justify-content: center;
     align-items: center;
     width: 35vw;
-    height: 92vh;
+    height: 100vh;
     background-color: rgb(0, 0, 0);
     margin: auto;
+    padding-top: 8vh;
   
   }
   
