--- a/src/components/sign-up/sign-up-form.module.css
+++ b/src/components/sign-up/sign-up-form.module.css
@@ -5,9 +5,9 @@
     justify-content: center;
     align-items: center;
     width: 35vw;
-    height: 92vh;
     background-color: rgb(0, 0, 0);
-    margin: auto;
+    margin: 12vh auto;
+    
   
   }
   
